# fleet-challenge

./: Cargo.toml  README.md
src/: application.rs  error.rs  lib.rs  main.rs
src/domain/: graph.rs  mod.rs  valid_graph.rs
src/routes/: health_controller.rs  layout_controller.rs  mod.rs  route_controller.rs
src/views/: error_response.rs  graph.rs  input_map.rs  mod.rs  route_request.rs  route_response.rs  success_response.rs  utils.rs
tests/api/: health_tests.rs  layout_tests.rs  main.rs  routing_tests.rs
tests/api/utils/: app_utils.rs  graph_utils.rs  mod.rs  request_client.rs
tests/data/: invalid_node_edge_count.json  invalid_node_in_edge.json  partitioned_graph.json  valid_map.json  valid_map_extended.json
