[package]
name = "arculus-fleet-manager"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "arculus-fleet-manager"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["macros"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
once_cell = "1.20.2"

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
